feat: 新增生成新单词的功能
